<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_500">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="25sp"
            android:text="@string/tic_tac_toe"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tic"/>

    <LinearLayout
        android:id="@+id/tic_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Xx"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tic"
            app:layout_constraintStart_toEndOf="@id/tic_layout"
            app:layout_constraintEnd_toStartOf="@id/toe_layout"
            android:id="@+id/tac_layout"
            android:background="@color/black"
            android:padding="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/O"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/XX"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oO"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tic"
            app:layout_constraintStart_toEndOf="@id/tac_layout"
            android:id="@+id/toe_layout"
            android:background="@color/black"
            android:padding="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xX"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Oo"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/X"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tic_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/one_player"
            app:hintTextColor="@color/white"
            app:boxCornerRadiusTopStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusBottomEnd="10sp"
            android:layout_marginVertical="30sp"
            android:id="@+id/one_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/one"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/one_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="25sp"
            android:hint="@string/two_players"
            app:hintTextColor="@color/white"
            app:boxCornerRadiusTopStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusBottomEnd="10sp"
            android:id="@+id/two_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/two"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:id="@+id/about"
            app:layout_constraintTop_toBottomOf="@id/two_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/about"
            app:hintTextColor="@color/white"
            android:layout_marginVertical="25sp"
            app:boxCornerRadiusTopStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusBottomEnd="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/about_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30sp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_lock_silent_mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButton3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30sp"
            android:contentDescription="@string/TODO" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageButton3"
            android:layout_marginBottom="30sp"
            android:contentDescription="@string/Todo" />


    </androidx.constraintlayout.widget.ConstraintLayout>